2003-05-16 Araki Ken <arakiken@users.sf.net>

	* Cleaned up mlterm/ml_(edit|model|line).[ch].

2003-05-16  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_dnd.h: added a X error handler.

2003-05-15  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_dnd.h, xwindow/x_dnd.c, 
	  xwindow/x_window.h,xwindow/x_window.c:
	Major rewrite of the DND subsystem.

2003-05-12  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_dnd.c: added another sanity check so that
	malicious dnd data will be ignored

	* xwindow/x_dnd.c: mlterm could be crashed
	if only one mime-type was provided for a dropped data.

2003-05-12  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_dnd.c: fixed typo

2003-05-11  MINAMI Hirokazu  <minami@mistfall.net>

	* doc/term/mlterm.tc: Removed u[6-9] to make the file smaller.

2003-05-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in, kiklib/configure.in, mkf/configure.in: added
	  AC_LIBTOOL_WIN32_DLL macro.
	* kiklib/src/Makefile.in: MAJOR increment with a change of
	  kik_dl_open().


2003-05-06  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_dnd.c, xwindow/x_dnd.h : adopt XDnD v5 spec.
	
2003-05-06  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_term_manager.c: plugged memory leak.

2003-05-05  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c: minor code cleanup

2003-05-05  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: The rxvt style background changing 
	sequence "ESC ] 49 ; colorname BEL" was not working. 

2003-05-05 Araki Ken <arakiken@users.sf.net>

	* Minor fixes around only_use_unicode_font and not_use_unicode_font options.

2003-04-14  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c: 
	 - power of zero was used for color conversion. fixed. 

2003-04-13 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_term_manager.c: changed to be more compatible with xterm/rxvt.
	  If "--icon" option was not specified, title name is used for
	  WM_ICON_NAME,
